# CityTrafficSimulatorPlusPlus

./: .gitignore  CMakeLists.txt  README.md
cmake/: commonconf.cmake  utils.cmake
cts++/: CMakeLists.txt
cts++/src/: main.cpp
cts++/src/gui/: networkrenderwidget.cpp  networkrenderwidget.h  scriptingwidget.cpp  scriptingwidget.h
cts-core/: CMakeLists.txt
cts-core/include/cts-core/: coreapi.h
cts-core/include/cts-core/base/: algorithmicgeometry.h  bounds.h  log.h  math.h  randomizer.h  scopeguard.h  signal.h  tickable.h  types.h  utils.h
cts-core/include/cts-core/network/: bezierparameterization.h  connection.h  intersection.h  location.h  network.h  node.h  routing.h
cts-core/include/cts-core/simulation/: randomizer.h  simulation.h
cts-core/include/cts-core/traffic/: trafficmanager.h  vehicle.h
cts-core/src/base/: algorithmicgeometry.cpp  bounds.cpp  log.cpp  math.cpp  randomizer.cpp  signal.cpp
cts-core/src/network/: bezierparameterization.cpp  connection.cpp  intersection.cpp  location.cpp  network.cpp  node.cpp  routing.cpp
cts-core/src/simulation/: randomizer.cpp  simulation.cpp
cts-core/src/traffic/: trafficmanager.cpp  vehicle.cpp
cts-core/test/: CMakeLists.txt  test_bezierparameterization.cpp  test_bounds.cpp  test_network.cpp  test_routing.cpp  test_signal.cpp
cts-gui/: CMakeLists.txt
cts-gui/include/cts-gui/: config.h  mainwindow.h  networkrenderwidget.h
cts-gui/include/cts-gui/scripting/: completinglualineedit.h  luatablewidget.h  scriptingwidget.h
cts-gui/include/cts-gui/tools/: luaitemmodel.h  treeitem.h
cts-gui/src/: mainwindow.cpp  networkrenderwidget.cpp
cts-gui/src/scripting/: completinglualineedit.cpp  luatablewidget.cpp  scriptingwidget.cpp
cts-gui/src/tools/: luaitemmodel.cpp  treeitem.cpp
cts-lua/: CMakeLists.txt
cts-lua/ext/lua-5.3/: CMakeLists.txt
cts-lua/include/cts-lua/: config.h  cts-lua.h
cts-lua/src/: cts-lua.cpp
data/: inspect.lua  intersection.xml
ext/lua-5.3/: CMakeLists.txt
ext/sol2/: LICENSE.txt  sol.hpp
ext/tinyxml2/: CMakeLists.txt
